<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_activity_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
...
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_activity_main_toolbar_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/x_light_gray_border_white_solid_rounded_4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_activity_main_toolbar_info"
            app:layout_constraintWidth_percent=".9">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_activity_main_toolbar_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_gray_down_arrow_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_activity_main_toolbar_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/tajawal_regular"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
...
                android:padding="@dimen/padding_4dp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_activity_main_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_box_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintStart_toStartOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintTop_toBottomOf="@id/cl_activity_main_toolbar_search"
            app:srcCompat="@drawable/ic_gray_down_arrow_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_activity_main_try_again"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginVertical="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:background="@drawable/red_solid_rounded_8dp"
            android:fontFamily="@font/tajawal_medium"
...
